2A/05_Projet_GL/src/test/deca/codegen/valid/SansObjet/32_div_int.deca
// Description:
//    Programme avec division d'entiers
// Resultats:
//    1.00000e+00
//
// Historique:
//    cree le 10/1/2024

{
    int x = 4/2;
    float y = x/2;
    print(y);
}