2A/05_Projet_GL/src/test/deca/codegen/invalid/sansObjet/03_div_float_zero.deca
// Description:
//    Programme avec division par 0.0
// Resultats:
//    Erreur : calcul arithmetique debordant
//
// Historique:
//    cree le 10/1/2024

{
    float x = 5.6/0.0;
    println(x);
}